@@ -9,6 +9,7 @@ cm4all-beng-proxy (0.7.23) unstable; urgency=low
   * {http,memcached}-client: check "direct" mode after buffer flush
   * cmdline: added option "fcgi_stock_limit"
   * python: auto-export function write_packet()
+  * python: Response methods return self
 
  --
 
